# hardware

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP_UPDATED.md  profile.jsonl
.github/workflows/: bench.yml  coverage.yml
crates/api/: Cargo.toml  README.md
crates/api/src/: lib.rs  main.rs
crates/backend_akida/: Cargo.toml
crates/backend_akida/src/: lib.rs
crates/backend_brainscales/: Cargo.toml
crates/backend_brainscales/src/: lib.rs
crates/backend_cpu_ref_sim/: Cargo.toml
crates/backend_cpu_ref_sim/src/: lib.rs
crates/backend_dynaps/: Cargo.toml
crates/backend_dynaps/src/: lib.rs
crates/backend_loihi/: Cargo.toml
crates/backend_loihi/src/: lib.rs
crates/backend_speck/: Cargo.toml
crates/backend_speck/src/: lib.rs
crates/backend_spinnaker/: Cargo.toml
crates/backend_spinnaker/src/: lib.rs
crates/backend_truenorth/: Cargo.toml
crates/backend_truenorth/src/: lib.rs
crates/backend_xylo/: Cargo.toml
crates/backend_xylo/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  run.rs
crates/cli/tests/: pipeline_e2e.rs
crates/frontend_pynn/src/: common.rs  lib.rs
crates/hal/: Cargo.toml
crates/hal/src/: lib.rs
crates/mir/: Cargo.toml
crates/mir/src/: edit_api.rs  event_driven.rs  lib.rs  physical.rs  semantic.rs  validation.rs
crates/mlir-bridge/src/: lib.rs
crates/nir/: Cargo.toml
crates/nir/src/: data_structures.rs  eir.rs  engines.rs  events.rs  lib.rs  phys_ir.rs  transactions.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/benches/: partition_bench.rs
crates/orchestrator/src/: lib.rs  transactions.rs
crates/passes/: Cargo.toml
crates/passes/src/: eir_validate.rs  energy_embedding.rs  engine_selection.rs  gadgetization.rs  kernel_fusion_and_scheduling.rs  lib.rs  llvm_optimize.rs  logic_to_energy.rs  lower_to_kernels.rs  memory_layout_and_quant.rs  proofs.rs  transactional_sample.rs  validation.rs
crates/passes/tests/: goldens.rs
crates/py/: Cargo.toml
crates/py/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/sim_arbor/: Cargo.toml
crates/sim_arbor/src/: lib.rs
crates/sim_coreneuron/: Cargo.toml
crates/sim_coreneuron/src/: lib.rs
docs/src/: metrics.md
docs/tutorials/: pipeline.html
examples/nir/: pipeline_simple.json
fixtures/goldens/: kernels_chain_small.json  layout_quant_chain_small.json  schedule_chain_small.json
neuro-compiler-gui/: COMPLETION_STATUS.md  FEATURE_ANALYSIS.md  FINAL_COMPLETION.md  README.md  cli_executor.py  main.py  requirements.txt  worker.py
neuro-compiler-gui/tabs/: base_tab.py  compile_tab.py  deploy_tab.py  export_mlir_tab.py  import_tab.py  list_targets_tab.py  lower_tab.py  package_tab.py  profile_tab.py  run_tab.py  simulate_tab.py
targets/: brainscales2.toml  speck.toml  xylo.toml
