[package]
name = "nc-backend-speck"
version = "0.1.0"
edition = "2021"
description = "SynSense Speck backend for neuro-compiler"
license = "UNLICENSED"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Local crates
nc-hal = { path = "../hal" }
nc-nir = { path = "../nir" }
nc-passes = { path = "../passes" }
nc-telemetry = { path = "../telemetry", optional = true }

[features]
backend-speck = []
telemetry = ["nc-telemetry"]