[package]
name = "nc-mir"
version = "0.0.1"
edition = "2021"
license = "UNLICENSED"
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
telemetry = ["nc-telemetry"]
orchestrator = ["nc-orchestrator"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
crc32fast = "1.3"
chrono = { workspace = true }
nc-nir = { path = "../nir" }
nc-telemetry = { path = "../telemetry", optional = true, package = "nc-telemetry" }
nc-orchestrator = { path = "../orchestrator", optional = true, package = "nc-orchestrator" }